--- a/src/pages/pl/how-we-work.astro
+++ b/src/pages/pl/how-we-work.astro
@@ -65,7 +65,8 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
         </li>
         <li>
           <span class="kicker" style="margin-right:10px;">06</span>
-          stabilizacja i przekazanie do utrzymania
+          stabilizacja po wdrożeniu oraz przekazanie systemu
+          lub ustalenie dalszego modelu współpracy
         </li>
       </ul>
     </div>
